moved common parts to maven parent POM